--- a/src/main/resources/bootstrap.yml
+++ b/src/main/resources/bootstrap.yml
@@ -6,4 +6,22 @@ spring:
       default
   cloud:
     config:
+      uri: http://192.168.43.80:8888
       enabled: true
+      discovery:
+        enabled: true
+        serviceId: configserver
+  zipkin:
+    baseUrl: http://192.168.43.80:9411/        
+
+eureka:
+  instance:
+    preferIpAddress: true
+  client:
+    registerWithEureka: true
+    fetchRegistry: true
+    serviceUrl:
+        defaultZone: http://192.168.43.80:8761/eureka/
+  
+encrypt:
+    key: spmia.2018  
