--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -3,16 +3,10 @@ logging:
   level:
     com.netflix: WARN
     org.springframework.web: WARN
+#    org.springframework.security.web: DEBUG
     com.thoughtmechanix: DEBUG
-
-eureka:
-  instance:
-    preferIpAddress: true
-  client:
-    registerWithEureka: true
-    fetchRegistry: true
-    serviceUrl:
-        defaultZone: http://localhost:8761/eureka/
-
+    
 server:
-  contextPath:   /auth
+  port: 9999
+  servlet:
+    contextPath: /auth
